# ilo-li-sina

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  ilo_li_sina-test.ils  nasin_kepeken.md  paliELipuToki.py
lipu_pana/: cat.ils  fizzbuzz.ils  iloTruthMachine.ils  ilo_REPL.ils  maze.ils  quadratic.ils  soweliPiOkoTawa.ils  theOnlyThingIKnowForReal.ils  tokiEToki.ils  turingCompletness.ils
lipu_pi_kama_sona/: README-en_US.md  README-ru_RU.md  nasin_kepeken-en_US.md  nasin_kepeken-ru_RU.md  nasin_kepeken-tok.md
lipu_pi_pana_ike/: kipisi.ils
lipu_pi_pana_ike/lawa/: lawa1.ils  lawa2.ils  lawa3.ils
lipu_pi_pana_ike/pali/: pali1.ils  pali2.ils
nimi_en_toki/: en_US.lang  ru_RU.lang  tok.lang
src/: ike.cpp  ike.hpp  ilo_li_sina.cpp
src/ante_toki/: ante_toki.cpp  ante_toki.hpp
src/ijo_kepeken/: ijoTawaPokiMAP.hpp  ike.cpp  ike.hpp  poki_Map.hxx  toki.cpp  toki.hpp
src/ilo/: kipisi.cpp  kipisi.hpp  toki.cpp  toki.hpp
src/ilo/lawa/: lawa.cpp  lawa.hpp  nimi_wawa.cpp  nimi_wawa.hpp  sona_lawa.hpp
src/ilo/pali/: kasi.cpp  kasi.hpp  pali.cpp  pali.hpp
src/ilo_pi_ilo_li_sina/: kipisi.cpp  kipisi.hpp  nimi_wawa.cpp  nimi_wawa.hpp  pali.cpp  pali.hpp  toki.cpp  toki.hpp
src/kepeken/: ike.cpp  ike.hpp  lawa_OS.cpp  lawa_OS.hpp  poki_Map.hxx  toki.cpp  toki.hpp
src/kipisi_pi_lipu_wawa/: kipisi.cpp  kipisi.hpp  kulupu_nimi.cpp  kulupu_nimi.hpp
src/lawa_pi_ilo_nanpa/: lawa.cpp  lawa.hpp  nimi_wawa.cpp  nimi_wawa.hpp
src/pali_pi_lipu_wawa_tan_kulupu_nimi/: kasiPiKasiSuliPiNimiWawa.cpp  kasiPiKasiSuliPiNimiWawa.hpp  nimi_wawa.cpp  nimi_wawa.hpp  pali.cpp  pali.hpp
